fix: fix scrollbar thumb width

--- a/online-zoo/src/assets/styles/components/_testimonials.scss
+++ b/online-zoo/src/assets/styles/components/_testimonials.scss
@@ -69,7 +69,7 @@ $progress-bar-border: 1px;
 .testimonials__scrollbar[type="range"]::-webkit-slider-thumb {
   -moz-appearance: none !important;
   appearance: none !important;
-  width: 50%;
+  width: 12.5%;
   height: 6px;
   background-color: #FE9013;
   border-radius: 5px;
@@ -82,7 +82,7 @@ $progress-bar-border: 1px;
 .testimonials__scrollbar[type="range"]::-moz-range-thumb {
   -moz-appearance: none !important;
   appearance: none !important;
-  width: 50%;
+  width: 12.5%;
   height: 6px;
   background-color: #FE9013;
   border-radius: 5px;
